Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,8 @@ input:focus {
 }
 
 .feed {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     width: 100%;
     padding: 0;
 }
